--- a/JetstreamSkiserviceAPI/appsettings.json
+++ b/JetstreamSkiserviceAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "JetstreamSkiserviceDB": "Server=.\\;Database=JetstreamSkiserviceDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
+
 }
