--- a/JetstreamSkiserviceAPI/appsettings.json
+++ b/JetstreamSkiserviceAPI/appsettings.json
@@ -8,6 +8,21 @@
   "ConnectionStrings": {
     "JetstreamSkiserviceDB": "Server=.\\;Database=JetstreamSkiserviceDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-  "AllowedHosts": "*"
-
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "../webapi-.log",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3}] {Username} {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  }
 }
