--- a/JetstreamSkiservice_Frontend/package.json
+++ b/JetstreamSkiservice_Frontend/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "flowbite-datepicker": "^1.2.4"
   }
 }
