change sql server user

--- a/JetstreamSkiserviceAPI/appsettings.json
+++ b/JetstreamSkiserviceAPI/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "JetstreamSkiserviceDB": "Server=.\\;Database=JetstreamSkiserviceDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    // "JetstreamSkiserviceDB": "Server=.\\;Database=JetstreamSkiserviceDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "JetstreamSkiserviceDB": "Server=.\\;Database=JetstreamSkiserviceDB;User ID=Meier;Password=password;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*",
   "Serilog": {
